...
            TextField(
                String(localized: "search…", bundle: .module),
                text: $store.inputText,
                selection: $store.textSelection
            )
            .keyboardType(.webSearch)
            .accessibilityIdentifier("searchTextField")
            .disableAutocorrection(true)
            .textInputAutocapitalization(.never)
            .textSelectionAffinity(.upstream)
            .focused($focusedField, equals: .search)
            .foregroundStyle(Color(.systemGray))
            .onSubmit {
...
                } icon: {
                    Image(systemName: "xmark.circle.fill")
                        .foregroundStyle(store.inputText.isEmpty ? Color(.systemGray3) : Color(.systemGray))
                }
                .labelStyle(.iconOnly)
            }
            .accessibilityIdentifier("clearButton")
            .disabled(store.inputText.isEmpty)
        }
        .padding(.horizontal, 8)
        .frame(maxWidth: .infinity)
        .frame(height: height)
        .background(Color(.systemGray5), in: .rect(cornerRadius: 10))
...
