...
                Label {
                    Text("openBookmarks", bundle: .module)
                } icon: {
                    Image(systemName: "book")
                }
            }
            .accessibilityIdentifier("openBookmarksButton")

            Button {
                Task {
                    await store.send(.goBackButtonTapped)
                }
            } label: {
...
